wallet_core/error_category/error_category_derive/tests/derive_error_category/fail_on_struct_missing_defer.stderr
error: expected `#[defer]` attribute to identify the field to defer into, found none
 --> tests/derive_error_category/fail_on_struct_missing_defer.rs:5:8
  |
5 | struct Error {
  |        ^^^^^
